--- a/usr/galaxysmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/galaxysmtd_initramfs/jb_init/init.aries.rc
@@ -4,15 +4,21 @@ import init.aries.gps.rc
 on init
     loglevel 9
     export EXTERNAL_STORAGE /storage/sdcard0
-    mkdir /storage 0050 system sdcard_r
-    mkdir /storage/sdcard0 0000 system system
-    symlink /storage/sdcard0 /sdcard
-    symlink /storage/sdcard0 /mnt/sdcard
+    export SECONDARY_STORAGE /storage/sdcard1
 
     # FIXME: Market checks this variable for space-checking, but downloads to /datadata
     export DOWNLOAD_CACHE /data/download
 
-    
+    mkdir /storage 0050 system sdcard_r
+    mkdir /storage/sdcard0 0000 system system
+    mkdir /storage/sdcard1 0000 system system
+    symlink /storage/sdcard0 /sdcard
+    symlink /storage/sdcard0 /mnt/sdcard
+    symlink /storage/sdcard1 /emmc
+    symlink /storage/sdcard1 /mnt/emmc
+    # FIXME: Remove emmc?
+    mkdir /datadata 0771 system system
+
     # We will create our own ril-daemon service in class 'core' because the
     # rild doesn't like being killed. (During device encryption.)
     stop ril-daemon
@@ -24,8 +30,6 @@ on boot
     setprop ro.product.device aries
     setprop ro.radio.noril yes
 
-    setprop ro.crypto.keyfile.userdata /efs/userdata_footer
-
 # fake some battery state
     setprop status.battery.state Slow
     setprop status.battery.level 5
@@ -36,10 +40,14 @@ on boot
     setprop ro.telephony.call_ring.multiple 0
 
 on fs
+# LVM: set up LVM volumes
+    exec /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
+    exec /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
+
     mkdir /radio 0775 radio radio
     mount yaffs2 mtd@radio /radio
-    mount ext4 /dev/block/mmcblk0p2 /data wait nosuid nodev noatime nodiratime noauto_da_alloc
     mount yaffs2 mtd@datadata /datadata
+    mount_all fstab.aries
 
     chown radio radio /radio/modem.bin
 
@@ -65,7 +73,6 @@ on fs
     chmod 660 /sys/class/sec/uart_switch/UART_SEL/value
 
 on post-fs
-    # We chown/chmod /datadata again so because mount is run as root + defaults
     chown system system /datadata
     chmod 0771 /datadata
 
@@ -80,6 +87,9 @@ on post-fs
     chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
     chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
 
+# trigger governor change uevent
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
+
 on post-fs-data
     # for migrating download provider's cache out of the small /data/data
     mkdir /data/data2 0771 system system
@@ -87,12 +97,19 @@ on post-fs-data
     # setup datadata
     exec /sbin/setupdatadata.sh
 
+    # boot-patch
+    exec /sbin/boot-patch.sh
+
     # wi-fi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
 
     # download cache
     mkdir /data/download 0770 system cache
+
+    # logs
+    mkdir /data/log 0775 root root
+    chmod 0775 /data/log
 
     setprop vold.post_fs_data_done 1
 
@@ -110,14 +127,42 @@ service pvrsrvinit /system/vendor/bin/pvrsrvinit
     group root
     oneshot
 
-service wpa_supplicant /system/bin/wpa_supplicant \
-		-Dnl80211 -iwlan0 -puse_p2p_group_interface=1 -e/data/misc/wifi/entropy.bin
-    class main
-    socket wpa_wlan0 dgram 0660 wifi wifi
-    disabled
-    oneshot
+# FIXME
+# service p2p_supplicant /system/bin/wpa_supplicant \
+#   -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
+#   -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1
+#   #   we will start as root and wpa_supplicant will switch to user wifi
+#   #   after setting up the capabilities required for WEXT
+#   #   user wifi
+#   #   group wifi inet keystore
+#   class main
+#   socket wpa_wlan0 dgram 660 wifi wifi
+#   disabled
+#   oneshot
 
-service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
+service p2p_supplicant /system/bin/wpa_supplicant \
+	-iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1
+	#   we will start as root and wpa_supplicant will switch to user wifi
+	#   after setting up the capabilities required for WEXT
+	#   user wifi
+	#   group wifi inet keystore
+	class main
+	socket wpa_wlan0 dgram 660 wifi wifi
+	disabled
+	oneshot
+
+service wpa_supplicant /system/bin/wpa_supplicant \
+	-iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
+	#   we will start as root and wpa_supplicant will switch to user wifi
+	#   after setting up the capabilities required for WEXT
+	#   user wifi
+	#   group wifi inet keystore
+	class main
+	socket wpa_wlan0 dgram 660 wifi wifi
+	disabled
+	oneshot
+
+service dhcpcd_wlan0 /system/bin/dhcpcd -aABKL
     class main
     disabled
     oneshot
@@ -172,18 +217,18 @@ service bugreport /system/bin/dumpstate -d -v -o /sdcard/bugreports/bugreport
     keycodes 114 115 116
 
 service orientationd /system/vendor/bin/orientationd
-    class late_start
+    class main
     user compass
     group system input
     disabled
 
 service geomagneticd /system/vendor/bin/geomagneticd
-    class late_start
+    class main
     user compass
     group system input
 
 service tvout /system/bin/tvoutserver
-    class late_start
+    class main
     user system
     group graphics
 
@@ -191,4 +236,3 @@ service tvouthack /system/bin/tvouthack
     user system
     group graphics
     disabled
-
